# lcs

./: .anjuta_sym_db.db  configure.ac  package-lock.json
.anjuta/session/: anjuta.session
lcs/lcs/: lcs.sln
lcs/lcs/lcs/: lcs.bi  lcs.nuget.props  lcs.nuget.targets  lcs.nuproj  lcs.wfbe
lcs/lcs/lcs/VisualC/C#/: lcs.desktop
lcs1/: lcs1.dlangidews  lcs1.dlangidews.wssettings
lcs1/lcs1/: dub.json
lcs1/lcs1/source/InputPattern/: package.d
lcs1/lcs1/source/Pattern/: package.d
lcs1/lcs1/source/SelectClick/: package.d
lcs2/: package.json
src/: Makefile.am  lcs.h
